--- a/src/app/pages/grafica1/grafica1.component.html
+++ b/src/app/pages/grafica1/grafica1.component.html
@@ -1,1 +1,38 @@
-<p>grafica1 works!</p>
+<div class="row">
+  <div class="col-6">
+    <app-dona
+      [title]="title"
+      [doughnutChartLabels]="doughnutChartLabels"
+      [doughnutChartData]="doughnutChartData"
+      [doughnutChartTyPe]="doughnutChartTyPe"
+      [colors]="colors"
+    ></app-dona>
+  </div>
+  <div class="col-6">
+    <app-dona
+      [title]="title1"
+      [doughnutChartLabels]="doughnutChartLabels"
+      [doughnutChartData]="doughnutChartData1"
+      [doughnutChartTyPe]="doughnutChartTyPe"
+      [colors]="colors1"
+    ></app-dona>
+  </div>
+  <div class="col-6">
+    <app-dona
+      [title]="title2"
+      [doughnutChartLabels]="doughnutChartLabels"
+      [doughnutChartData]="doughnutChartData2"
+      [doughnutChartTyPe]="doughnutChartTyPe"
+      [colors]="colors2"
+    ></app-dona>
+  </div>
+  <div class="col-6">
+    <app-dona
+      [title]="title3"
+      [doughnutChartLabels]="doughnutChartLabels"
+      [doughnutChartData]="doughnutChartData3"
+      [doughnutChartTyPe]="doughnutChartTyPe"
+      [colors]="colors3"
+    ></app-dona>
+  </div>
+</div>
