--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -9,33 +9,33 @@
     <div class="navbar-header">
       <a class="navbar-brand" href="index.html">
         <!-- Logo icon --><b>
-          <!--You can put here icon as well // <i class="wi wi-sunset"></i> //-->
-          <!-- Dark Logo icon -->
-          <img
-            src="./assets/images/logo-icon.png"
-            alt="homepage"
-            class="dark-logo"
-          />
-          <!-- Light Logo icon -->
-          <img
-            src="./assets/images/logo-light-icon.png"
-            alt="homepage"
-            class="light-logo"
-          />
-        </b>
+        <!--You can put here icon as well // <i class="wi wi-sunset"></i> //-->
+        <!-- Dark Logo icon -->
+        <img
+          src="./assets/images/logo-icon.png"
+          alt="homepage"
+          class="dark-logo"
+        />
+        <!-- Light Logo icon -->
+        <img
+          src="./assets/images/logo-light-icon.png"
+          alt="homepage"
+          class="light-logo"
+        />
+      </b>
         <!--End Logo icon -->
         <!-- Logo text --><span>
           <!-- dark Logo text -->
           <img
             src="./assets/images/logo-text.png"
             alt="homepage"
-            class="dark-logo" />
-          <!-- Light Logo text -->
+            class="dark-logo"/>
+        <!-- Light Logo text -->
           <img
             src="./assets/images/logo-light-text.png"
             class="light-logo"
             alt="homepage"
-        /></span>
+          /></span>
       </a>
     </div>
     <!-- ============================================================== -->
@@ -51,14 +51,14 @@
           <a
             class="nav-link nav-toggler hidden-md-up waves-effect waves-dark"
             href="javascript:void(0)"
-            ><i class="ti-menu"></i
+          ><i class="ti-menu"></i
           ></a>
         </li>
         <li class="nav-item">
           <a
             class="nav-link sidebartoggler hidden-sm-down waves-effect waves-dark"
             href="javascript:void(0)"
-            ><i class="ti-menu"></i
+          ><i class="ti-menu"></i
           ></a>
         </li>
         <li class="nav-item hidden-sm-down"></li>
@@ -74,7 +74,7 @@
           <a
             class="nav-link hidden-sm-down waves-effect waves-dark"
             href="javascript:void(0)"
-            ><i class="ti-search"></i
+          ><i class="ti-search"></i
           ></a>
           <form class="app-search">
             <input
@@ -129,7 +129,7 @@
                     <div class="mail-contnet">
                       <h5>Event today</h5>
                       <span class="mail-desc"
-                        >Just a reminder that you have event</span
+                      >Just a reminder that you have event</span
                       >
                       <span class="time">9:10 AM</span>
                     </div>
@@ -142,7 +142,7 @@
                     <div class="mail-contnet">
                       <h5>Settings</h5>
                       <span class="mail-desc"
-                        >You can customize this template as you want</span
+                      >You can customize this template as you want</span
                       >
                       <span class="time">9:08 AM</span>
                     </div>
@@ -228,7 +228,7 @@
                     <div class="mail-contnet">
                       <h5>Sonu Nigam</h5>
                       <span class="mail-desc"
-                        >I've sung a song! See you at</span
+                      >I've sung a song! See you at</span
                       >
                       <span class="time">9:10 AM</span>
                     </div>
@@ -292,19 +292,19 @@
             aria-expanded="false"
           >
             <i class="flag-icon flag-icon-us"></i
-          ></a>
+            ></a>
           <div class="dropdown-menu dropdown-menu-right animated fadeIn fast">
             <a class="dropdown-item" href="#"
-              ><i class="flag-icon flag-icon-in"></i> India</a
+            ><i class="flag-icon flag-icon-in"></i> India</a
             >
             <a class="dropdown-item" href="#"
-              ><i class="flag-icon flag-icon-fr"></i> French</a
+            ><i class="flag-icon flag-icon-fr"></i> French</a
             >
             <a class="dropdown-item" href="#"
-              ><i class="flag-icon flag-icon-cn"></i> China</a
+            ><i class="flag-icon flag-icon-cn"></i> China</a
             >
             <a class="dropdown-item" href="#"
-              ><i class="flag-icon flag-icon-de"></i> Dutch</a
+            ><i class="flag-icon flag-icon-de"></i> Dutch</a
             >
           </div>
         </li>
@@ -318,17 +318,17 @@
             data-toggle="dropdown"
             aria-haspopup="true"
             aria-expanded="false"
-            ><img
-              src="./assets/images/users/1.jpg"
-              alt="user"
-              class="profile-pic"
+          ><img
+            src="./assets/images/users/1.jpg"
+            alt="user"
+            class="profile-pic"
           /></a>
           <div class="dropdown-menu dropdown-menu-right animated fadeIn fast">
             <ul class="dropdown-user">
               <li>
                 <div class="dw-user-box">
                   <div class="u-img">
-                    <img src="./assets/images/users/1.jpg" alt="user" />
+                    <img src="./assets/images/users/1.jpg" alt="user"/>
                   </div>
                   <div class="u-text">
                     <h4>Steave Jobs</h4>
@@ -336,7 +336,7 @@
                     <a
                       href="pages-profile.html"
                       class="btn btn-rounded btn-danger btn-sm"
-                      >View Profile</a
+                    >View Profile</a
                     >
                   </div>
                 </div>
@@ -353,11 +353,11 @@
               </li>
               <li role="separator" class="divider"></li>
               <li>
-                <a href="#"><i class="ti-settings"></i> Account Setting</a>
+                <a [routerLink]="['/account-settings']"><i class="ti-settings"></i> Account Setting</a>
               </li>
               <li role="separator" class="divider"></li>
               <li>
-                <a href="#"><i class="fa fa-power-off"></i> Logout</a>
+                <a [routerLink]="['/auth/login']"><i class="fa fa-power-off"></i> Logout</a>
               </li>
             </ul>
           </div>
