--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -4,14 +4,14 @@
 <section
   id="wrapper"
   class="login-register login-sidebar"
-  style="background-image: url(../assets/images/background/login-register.jpg)"
+  style="background-image: url(./assets/images/background/login-register.jpg)"
 >
   <div class="login-box card">
     <div class="card-body">
       <form
         class="form-horizontal form-material"
         id="loginform"
-        action="index.html"
+        (submit)="login()"
       >
         <a href="javascript:void(0)" class="text-center db"
           ><img src="../assets/images/logo-icon.png" alt="Home" /><br /><img
@@ -60,8 +60,7 @@
           <div class="col-xs-12">
             <button
               class="btn btn-info btn-lg btn-block text-uppercase btn-rounded"
-              type="submit"
-            >
+              type="submit">
               Log In
             </button>
           </div>
