--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,6 +1,7 @@
 <!-- ============================================================== -->
 <!-- Main wrapper - style you can find in pages.scss -->
 <!-- ============================================================== -->
+<!-- {{ contador }} -->
 <section
   id="wrapper"
   class="login-register login-sidebar"
@@ -11,6 +12,8 @@
       <form
         class="form-horizontal form-material"
         id="loginform"
+        autocomplete="false"
+        [formGroup]="loginForm"
         (submit)="login()"
       >
         <a href="javascript:void(0)" class="text-center db"
@@ -22,9 +25,9 @@
           <div class="col-xs-12">
             <input
               class="form-control"
-              type="text"
-              required=""
-              placeholder="Username"
+              type="email"
+              formControlName="email"
+              placeholder="Email"
             />
           </div>
         </div>
@@ -33,7 +36,7 @@
             <input
               class="form-control"
               type="password"
-              required=""
+              formControlName="password"
               placeholder="Password"
             />
           </div>
@@ -45,7 +48,9 @@
                 id="checkbox-signup"
                 type="checkbox"
                 class="filled-in chk-col-light-blue"
-              />
+                formControlName="remember"
+                />
+                <!-- (change)="rememberMe()" -->
               <label for="checkbox-signup"> Remember me </label>
             </div>
             <a
@@ -66,31 +71,14 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-xs-12 col-sm-12 col-md-12 m-t-10 text-center">
-            <div class="social">
-              <a
-                href="javascript:void(0)"
-                class="btn btn-facebook"
-                data-toggle="tooltip"
-                title="Login with Facebook"
-              >
-                <i aria-hidden="true" class="fa fa-facebook"></i>
-              </a>
-              <a
-                href="javascript:void(0)"
-                class="btn btn-googleplus"
-                data-toggle="tooltip"
-                title="Login with Google"
-              >
-                <i aria-hidden="true" class="fa fa-google-plus"></i>
-              </a>
-            </div>
+          <div class="col-xs-12 col-sm-12 col-md-12 m-t-10 mb-4 text-center" id="google-btn">
+            <div #googleBtn id="buttonDiv"></div>
           </div>
         </div>
         <div class="form-group m-b-0">
           <div class="col-sm-12 text-center">
             Don't have an account?
-            <a href="pages-register2.html" class="text-primary m-l-5"
+            <a [routerLink]="['/auth/register']" class="text-primary m-l-5"
               ><b>Sign Up</b></a
             >
           </div>
@@ -110,7 +98,7 @@
             <input
               class="form-control"
               type="text"
-              required=""
+
               placeholder="Email"
             />
           </div>
