--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -357,7 +357,7 @@
               </li>
               <li role="separator" class="divider"></li>
               <li>
-                <a [routerLink]="['/auth/login']"><i class="fa fa-power-off"></i> Logout</a>
+                <a class="cursor" (click)="logout()"><i class="fa fa-power-off"></i> Logout</a>
               </li>
             </ul>
           </div>
